tests/ui/issues/issue-17405.stderr
error[E0574]: expected struct, variant or union type, found enum `Foo`
  --> $DIR/issue-17405.rs:7:9
   |
LL |         Foo { i } => ()
   |         ^^^ not a struct, variant or union type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0574`.
